@@ -22,6 +22,7 @@ Version 2.0
 * Check that all supplied antenna, source, scan and mode names are in vex file
 * Huge speed-up by not constantly sorting events
 * Fix convergence problem when there is no time gap between modules
+* Force v2d file to start with a letter
 
 Version 0.3
 ~~~~~~~~~~~
